--- a/style/listacompra.css
+++ b/style/listacompra.css
@@ -32,7 +32,7 @@ p{
 }
 
 
-#input-item{
+.input-item{
     padding: 12px 16px;
     display: block;
     border-radius: 24px;
@@ -41,7 +41,7 @@ p{
 }
 
 /* modando dentro do campo de digitação */
-#input-item::placeholder{
+.input-item::placeholder{
     font-family: "Montserrat", sans-serif;
     font-size: 16px;
     line-height: 19px;
@@ -49,7 +49,7 @@ p{
 
 
 
-#adicionar-botao{
+.adicionar-botao{
     text-align: center;
     padding: 12px 16px;
     border-radius: 24px;
@@ -73,7 +73,7 @@ form{
 
 
 
-.item-lista-container{
+.lista-item-container{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -133,7 +133,7 @@ ul{
 }
 
 
-.botao-acao{
+.item-lista-button{
     background-color: transparent;
     border: none;
 }
